# Auteur

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
auteur/: __init__.py  __main__.py  cli.py  client.py  config.py  dashscope.py  models.py  runner.py
auteur/api/: __init__.py  app.py  routes.py
auteur/jobs/: __init__.py  polling.py  queue.py
auteur/pipeline/: __init__.py  assemble.py  critique.py  design.py  develop.py  generate.py  voice.py
scripts/smoke/: _env.py  run_all.sh  smoke_i2v.py  smoke_image.py  smoke_qwen.py
tests/: test_assemble.py  test_critique.py  test_develop.py  test_models.py  test_polling.py
